<resources>
    <string name="app_name">FocusFocus</string>
    <string name="activityListNav">Actividades</string>
    <string name="actionNav">Start</string>
    <string name="statsNav">Stats</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_add_task">ActivityAddTask</string>
    <string name="action_accept">Accept</string>
    <string name="action_cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="subtask">SubTask</string>
    <string name="title">Title</string>
    <string name="date_task">End Date</string>
    <string name="task_estimated_time">Estimated Time</string>
</resources>
