<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.iteso.focusfocus.ActivityAddTask">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/circle"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/circle"
                android:backgroundTint="@color/colorPrimaryDark" />
            <EditText
                android:maxLength="30"
                android:id="@+id/titleTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:hint="@string/title" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="Priority"/>
            <Spinner
                android:padding="15dp"
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_margin="5dp"
                android:drawableEnd="@drawable/ic_date_range_black_24dp"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:hint="@string/date_task"
                android:layout_height="wrap_content" />
            <EditText
                android:drawableEnd="@drawable/ic_access_time_black_24dp"
                android:inputType="time"
                android:focusable="false"
                android:clickable="true"
                android:id="@+id/time"
                android:hint="@string/task_estimated_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"/>
        </LinearLayout>
        <TextView
            android:layout_marginLeft="20dp"
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:maxLength="200"
            android:id="@+id/descriptionTask"
            android:layout_margin="5dp"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"/>
        <LinearLayout
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/tag"
                android:background="@drawable/ic_create_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_margin="5dp"
                android:text="Tags"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight=".33"
                android:layout_height="wrap_content"
                android:id="@+id/tag1"/>
            <TextView
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight=".33"
                android:layout_height="wrap_content"
                android:id="@+id/tag2"/>
            <TextView
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight=".33"
                android:layout_height="wrap_content"
                android:id="@+id/tag3"/>
        </LinearLayout>
        <EditText
            android:maxLength="15"
            android:layout_margin="5dp"
            android:id="@+id/subtask"
            android:drawableStart="@drawable/ic_add_black_24dp"
            android:hint="@string/subtask"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ListView
            android:layout_margin="2dp"
            android:padding="6dp"
            android:nestedScrollingEnabled="true"
            android:id="@+id/list_item"
            android:layout_width="match_parent"
            android:layout_height="150dp"></ListView>
    </LinearLayout>
</ScrollView>
